fixing align item

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,8 +64,9 @@ nav a {
 .banner {
     padding: 30px 30px 0px 150px;
     display: flex;
-    align-item: center;
+    align-items: center;
     justify-content: space-between;
+}
 
 .btn-contact {
     width: 160px;
